# tech-blog-roll-the-dice

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.rst  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
roll_the_dice/: __init__.py  cli.py  dice.py
tests/: test_cli.py  test_dice.py
