[tool.poetry]
name = "roll-the-dice"
version = "0.0.1"
description = "a roll the dice CLI"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    "John Walk <email@example.com>"
]
repository = "https://github.com/pluralsight/tech-blog-roll-the-dice"
classifiers = [
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
mypy = "*"

[tool.poetry.scripts]
rtd = "roll_the_dice.cli:main"
